--- a/src/sass/blocks/_divider.scss
+++ b/src/sass/blocks/_divider.scss
@@ -3,6 +3,6 @@
     height: 3px;
     background-color: $main-color;
     &_mt25 {
-        margin-top: 25px;
+        margin: 25px auto 0 auto;
     }
 }
