--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -11,3 +11,12 @@
         border-radius: 100%;
     }
 }
+@mixin hover-social {
+    svg {
+        &:hover {
+            path {
+                fill: red;
+            }
+        }
+    }
+}
