--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -19,4 +19,17 @@
         font-size: 48px;
         line-height: 60px;
     }
+    &__section-title {
+        position: relative;
+        text-align: center;
+        @include circle;  
+        &::before {
+            left: 50%;
+            transform: translateX(-50%);
+        }  
+    }
+    &__section-subtitle {
+        margin-top: 6px;
+        text-align: center;
+    }
 }
