--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -9,6 +9,8 @@
     &__photo {
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
     &__descr {
@@ -33,7 +35,7 @@
     }
     &__form {
         display: grid;
-        grid-template-columns: repeat(2, 280px);
+        grid-template-columns: 280px;
         grid-template-rows: 45px 190px 45px;
         row-gap: 34px;
         justify-content: space-between;
@@ -71,5 +73,22 @@
         border: none;
         font-weight: 700;
         font-size: 14px;
+    }
+    &__triggers {
+        grid-column: 1 / 3;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        column-gap: 35px;
+        align-items: center;
+    }
+    &__policy {
+        input {
+            vertical-align: middle;                                         /* выровнял по вертикали инпут */      
+            margin-right: 5px;
+        }
+        span {
+            font-size: 12px;
+            line-height: 18px;
+        }
     }
 }
