--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -12,6 +12,8 @@
         transition: 0.3s all;
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         &_plans {
             grid-row: 1 / 3;
