--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -10,7 +10,7 @@
         justify-content: space-between;
         &-item {
             display: grid;
-            grid-template-columns: 240px auto;
+            grid-template-columns: 1fr auto;
             grid-template-rows: repeat(2, minmax(18px, auto));
             grid-auto-rows: minmax(18px, auto);
             row-gap: 5px;
